--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:23.0'
     compile 'org.jsoup:jsoup:1.11.3'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
